--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+_test/
+
+
 # Created by .ignore support plugin (hsz.mobi)
 ### JetBrains template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm
