--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "keystone": "latest",
-    "underscore": "latest"
+    "keystone": "^0.3.8",
+    "underscore": "latest",
+    "express-handlebars": "^1.1.0",
+    "handlebars": "^2.0.0",
+    "moment": "^2.8.1"
   },
   "engines": {
     "node": "0.10.x",
